--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+.kakao_btn{
+  background-image: url('./images/kakao_login_medium_narrow.png');
+  background-size : contain;
+  background-repeat: no-repeat;
+  margin: 10px auto;
+  /* padding: -10px; */
+  color: transparent;
+  width: 300px;
+  height: 70px;
+}
