--- a/src/scss/pages/Home.scss
+++ b/src/scss/pages/Home.scss
@@ -1,21 +1,21 @@
 .home {
-    height: 92vh;
-    background-color: #fff;
+    // height: 92vh;
+    // background-color: #fff;
 
-    h2 {
-        position: absolute;
-        bottom: 45vh;
-        left: 5vw;
-        font-size: 90px;
-        font-weight: 500;
-        color: #895858;
-        // border: 1px solid red;
-    }
+    // h2 {
+    //     position: absolute;
+    //     bottom: 45vh;
+    //     left: 5vw;
+    //     font-size: 90px;
+    //     font-weight: 500;
+    //     color: #895858;
+    //     // border: 1px solid red;
+    // }
 
-    .bgImg {
-        position: absolute;
-        bottom: 0;
-        width: 100vw;
-        height: 40vh;
-    }
+    // .bgImg {
+    //     position: absolute;
+    //     bottom: 0;
+    //     width: 100vw;
+    //     height: 40vh;
+    // }
 }
