--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,9 +3,9 @@
 
 // components
 @import './components/Navigation.scss';
-@import './components/Footer.scss';
+// @import './components/Footer.scss';
 
 // pages
 @import './pages/App.scss';
-@import './pages/Home.scss';
-@import './pages/Login.scss';
+// @import './pages/Home.scss';
+// @import './pages/Login.scss';
