--- a/src/scss/components/Navigation.scss
+++ b/src/scss/components/Navigation.scss
@@ -1,18 +1,42 @@
-.nav-area {
-    background-color: #fff;
-    // height: 64px;
-    height: 8vh;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+nav {
+    width: 150px;
+    height: 100vh;
+    background: #76AC41;
 
     ul {
-        display: flex;
-        justify-content: space-around;
-        width: 500px;
+        margin-top: 200px;
+        // border: 1px solid red;
+        
+        li {
+            // border: 1px solid red;
 
-        span {
-            color: rgba($color: #000000, $alpha: 0.8)
+            .menu-btn {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 120px;
+                height: 80px;
+                margin: 10px 0;
+                cursor: pointer;
+
+                .menu-icon {
+                    width: 50px;
+                    height: 50px;
+                    -webkit-filter: invert(100%) sepia(78%) saturate(2%) hue-rotate(21deg) brightness(111%) contrast(100%);
+                    filter: invert(100%) sepia(78%) saturate(2%) hue-rotate(21deg) brightness(111%) contrast(100%);
+                }
+        
+                .menu-icon.home,
+                .menu-icon.user {
+                    width: 40px;
+                    height: 40px;
+                }
+                &.active {
+                    border-radius: 25% 0 0 25%;
+                    background-color: rgba(255, 255, 255, 0.35);
+                }
+            }
         }
+
     }
 }
