recipe menu styling (desktop)

--- a/src/scss/pages/desktop copy/_Home.scss
+++ b/src/scss/pages/desktop copy/_Home.scss
@@ -1,6 +1,7 @@
 .home {
     // height: 92vh;
-    // background-color: #fff;
+    // margin: 20px;
+    border: 1px solid red;
 
     // h2 {
     //     position: absolute;
