--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -42,8 +42,8 @@
   background-size : contain;
   background-repeat: no-repeat;
   margin: 10px auto;
-  /* padding: -10px; */
+  padding: -10px;
   color: transparent;
   width: 300px;
   height: 70px;
-}
+} */
