--- a/src/scss/components/desktop copy/_Navigation.scss
+++ b/src/scss/components/desktop copy/_Navigation.scss
@@ -1,4 +1,8 @@
 nav {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
     width: 150px;
     height: 100vh;
     background: #76AC41;
@@ -22,8 +26,9 @@ nav {
                 .menu-icon {
                     width: 50px;
                     height: 50px;
-                    -webkit-filter: invert(100%) sepia(78%) saturate(2%) hue-rotate(21deg) brightness(111%) contrast(100%);
+                    border: 0;
                     filter: invert(100%) sepia(78%) saturate(2%) hue-rotate(21deg) brightness(111%) contrast(100%);
+                    // -webkit-filter: invert(100%) sepia(78%) saturate(2%) hue-rotate(21deg) brightness(111%) contrast(100%);
                 }
         
                 .menu-icon.home,
