--- a/src/scss/components/desktop/_Navigation.scss
+++ b/src/scss/components/desktop/_Navigation.scss
@@ -1,9 +1,12 @@
 @include desktop() {
     nav {
-        width: 150px;
+        position: fixed;
+        width: 120px;
         height: 100vh;
         background: rgba(118, 172,	65, .9);
-        // border: 1px solid red;
+        border-radius: 0 30px 30px 0;
+        box-shadow: 4px 4px 8px 8px rgba(0, 0, 0, 0.25);
+        z-index: 1;
         
         ul {
             margin-top: 100px;
