--- a/src/scss/pages/desktop/_Recipes.scss
+++ b/src/scss/pages/desktop/_Recipes.scss
@@ -53,7 +53,7 @@
             width: 840px;
             padding: 5px 0;
             // overflow: auto;
-            border: 1px solid orange;
+            // border: 1px solid orange;
             
             .recipe-item {
                 margin-bottom: 20px;
