--- a/src/scss/pages/mobile/_Recipes.scss
+++ b/src/scss/pages/mobile/_Recipes.scss
@@ -1,18 +1,20 @@
 @include desktop() {
+
     .page-recipes {
         display: flex;
         flex-direction: column;
         align-items: center;
-        // border: 1px dashed orangered;
 
         .search {
             display: flex;
             justify-content: center;
-            align-items: center;
-            width: 1100px;
+            // align-items: center;
+            // width: 840px;
+            width: 800px;
             height: 50px;
-            margin-bottom: 50px;
             padding: 0 25px;
+            margin-bottom: 40px;
+            // border: 1px solid red;
             border: 2px solid rgba(0, 0, 0, .3);
             border-radius: 25px;
 
@@ -21,7 +23,6 @@
                 height: 46px;
                 font-size: 20px;
                 border: none;
-
                 &:focus {
                     outline: none;
                 }
@@ -34,36 +35,30 @@
                 width: 50px;
                 height: 46px;
                 font-size: 30px;
+                color: rgba(0, 0, 0, .7);
                 outline: none;
                 border: none;
-                color: rgba(0, 0, 0, .7);
                 background-color: #fff;
                 cursor: pointer;
-
                 &:hover {
                     color: rgba(0, 0, 0, 1.0);
                 }
             }
         }
-
+        
         .recipe-list {
             display: flex;
             flex-direction: column;
             align-items: center;
-            height: 80vh;
-            width: 1100px;
-            padding: 10px;
-            overflow: auto;
-            border: 1px solid red;
-
+            width: 840px;
+            padding: 5px 0;
+            // overflow: auto;
+            // border: 1px solid orange;
+            
             .recipe-item {
-                margin-top: 20px;
-
-                &:first-child {
-                    margin-top: 0;
-                }
+                margin-bottom: 20px;
+                // border: 1px dashed green;
             }
         }
-
     }
 }
