--- a/src/scss/pages/tablet/_App.scss
+++ b/src/scss/pages/tablet/_App.scss
@@ -1,7 +1,20 @@
 @include tablet() {
     .App {
+        position: relative;
+        display: flex;
+        font-family: 'Nanum Gothic Coding', monospace;
+        
         main {
-            background: orange;
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 120px;
+            background: #fff;
+        }
+        
+        section {
+            margin: 50px auto;
+            // margin-top: 50px;
         }
     }
 }
