--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,19 +1,30 @@
-// base
+// --- base --- //
 @import './base/reset';
 
-// abstracts
+// --- abstracts --- //
 @import './abstracts/mixins';
 
-// components
+// --- components --- //
 @import './components/desktop/Navigation';
 @import './components/desktop/RecipeCard';
+@import './components/desktop/RecipePopup';
 
-// pages
+@import './components/tablet/Navigation';
+@import './components/tablet/RecipeCard';
+
+@import './components/mobile/Navigation';
+@import './components/mobile/RecipeCard';
+
+// --- pages --- //
 @import './pages/desktop/App';
 @import './pages/desktop/Home';
 @import './pages/desktop/Recipes';
 // @import './pages/Login.scss';
 
 @import './pages/tablet/App';
+@import './pages/tablet/Home';
+@import './pages/tablet/Recipes';
 
 @import './pages/mobile/App';
+@import './pages/mobile/Home';
+@import './pages/mobile/Recipes';
