--- a/src/scss/pages/desktop/_App.scss
+++ b/src/scss/pages/desktop/_App.scss
@@ -13,12 +13,12 @@
             top: 0;
             right: 0;
             left: 120px;
-            background: #fff;
+            // height: 100vh;s
+            background: #F6F0E4;
         }
         
         section {
-            margin: 50px auto;
-            // margin-top: 50px;
+            margin: 40px auto 30px;
         }
     }
 
