--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,11 +9,11 @@
 @import './components/desktop/RecipeCard';
 @import './components/desktop/RecipePopup';
 
-@import './components/tablet/Navigation';
-@import './components/tablet/RecipeCard';
+// @import './components/tablet/Navigation';
+// @import './components/tablet/RecipeCard';
 
-@import './components/mobile/Navigation';
-@import './components/mobile/RecipeCard';
+// @import './components/mobile/Navigation';
+// @import './components/mobile/RecipeCard';
 
 // --- pages --- //
 @import './pages/desktop/App';
@@ -21,10 +21,10 @@
 @import './pages/desktop/Recipes';
 // @import './pages/Login.scss';
 
-@import './pages/tablet/App';
-@import './pages/tablet/Home';
-@import './pages/tablet/Recipes';
+// @import './pages/tablet/App';
+// @import './pages/tablet/Home';
+// @import './pages/tablet/Recipes';
 
-@import './pages/mobile/App';
-@import './pages/mobile/Home';
-@import './pages/mobile/Recipes';
+// @import './pages/mobile/App';
+// @import './pages/mobile/Home';
+// @import './pages/mobile/Recipes';
