--- a/src/scss/pages/desktop/_App.scss
+++ b/src/scss/pages/desktop/_App.scss
@@ -13,7 +13,7 @@
             top: 0;
             right: 0;
             left: 120px;
-            // height: 100vh;s
+            height: 100vh;
             background: #F6F0E4;
         }
         
