--- a/src/scss/components/tablet/_Navigation.scss
+++ b/src/scss/components/tablet/_Navigation.scss
@@ -1,47 +1,54 @@
 @include tablet() {
     nav {
-        position: sticky;
-        top: 150px;
-        left: 20px;
-        width: 80px;
-        height: 500px;
-        background: rgba(118, 172,	65, .9);
-        border-radius: 40px;
+        position: fixed;
+        display: flex;
+        width: 120px;
+        height: 100vh;
+        flex-direction: column;
+        align-items: center;
+        background: #fff;
         box-shadow: 4px 4px 8px 8px rgba(0, 0, 0, 0.25);
         z-index: 1;
         
+        .nav-logo {
+            width: 50px;
+            height: 50px;
+            margin: 35px auto 100px;
+            filter: invert(75%) sepia(68%) saturate(5392%) hue-rotate(331deg) brightness(100%) contrast(103%);
+            // filter: invert(29%) sepia(11%) saturate(2231%) hue-rotate(14deg) brightness(97%) contrast(87%);
+            // filter: invert(63%) sepia(44%) saturate(554%) hue-rotate(48deg) brightness(89%) contrast(87%);
+            // filter: invert(14%) sepia(12%) saturate(2158%) hue-rotate(71deg) brightness(99%) contrast(92%);
+            // border: 1px solid red;
+        }
+        
         ul {
-            margin: 20px auto;
-            
             li {
                 
                 .menu-btn {
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    width: 80px;
-                    height: 80px;
-                    margin: 10px 0;
+                    width: 120px;
+                    height: 70px;
                     cursor: pointer;
-                    // border: 1px solid red;
 
                     .menu-icon {
                         width: 40px;
                         height: 40px;
-                        border: 0;
-                        filter: invert(100%) sepia(78%) saturate(2%) hue-rotate(21deg) brightness(111%) contrast(100%);
-                        // -webkit-filter: invert(100%) sepia(78%) saturate(2%) hue-rotate(21deg) brightness(111%) contrast(100%);
+                        filter: invert(14%) sepia(12%) saturate(2158%) hue-rotate(71deg) brightness(99%) contrast(92%);
                     }
-
                     .menu-icon.home,
                     .menu-icon.user {
-                        width: 40px;
-                        height: 40px;
+                        width: 35px;
+                        height: 35px;
                     }
-
+                    
                     &.active {
-                        border-radius: 40px;
-                        background-color: rgba(255, 255, 255, 0.35);
+                        background-color: #76AC41;
+                        .menu-icon{
+                            filter: invert(100%) sepia(78%) saturate(2%) hue-rotate(21deg) brightness(111%) contrast(100%);
+                            // -webkit-filter: invert(100%) sepia(78%) saturate(2%) hue-rotate(21deg) brightness(111%) contrast(100%);
+                        }
                     }
                 }
             }
