--- a/src/scss/pages/tablet/_App.scss
+++ b/src/scss/pages/tablet/_App.scss
@@ -9,12 +9,13 @@
             top: 0;
             right: 0;
             left: 120px;
-            background: #fff;
+            height: 100vh;
+            background: #F6F0E4;
         }
         
         section {
-            margin: 50px auto;
-            // margin-top: 50px;
+            margin: 40px auto 30px;
         }
     }
+
 }
