--- a/src/scss/pages/tablet/_Recipes.scss
+++ b/src/scss/pages/tablet/_Recipes.scss
@@ -1,64 +1,139 @@
 @include tablet() {
 
     .page-recipes {
-        // display: flex;
-        // flex-direction: column;
-        // align-items: center;
-
-        // .search {
-        //     display: flex;
-        //     justify-content: center;
-        //     // align-items: center;
-        //     // width: 840px;
-        //     width: 800px;
-        //     height: 50px;
-        //     padding: 0 25px;
-        //     margin-bottom: 40px;
-        //     // border: 1px solid red;
-        //     border: 2px solid rgba(0, 0, 0, .3);
-        //     border-radius: 25px;
-
-        //     input {
-        //         flex: 1;
-        //         height: 46px;
-        //         font-size: 20px;
-        //         border: none;
-        //         &:focus {
-        //             outline: none;
-        //         }
-        //     }
-
-        //     button {
-        //         display: flex;
-        //         justify-content: center;
-        //         align-items: center;
-        //         width: 50px;
-        //         height: 46px;
-        //         font-size: 30px;
-        //         color: rgba(0, 0, 0, .7);
-        //         outline: none;
-        //         border: none;
-        //         background-color: #fff;
-        //         cursor: pointer;
-        //         &:hover {
-        //             color: rgba(0, 0, 0, 1.0);
-        //         }
-        //     }
-        // }
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        // border: 1px solid red;
         
-        // .recipe-list {
-        //     display: flex;
-        //     flex-direction: column;
-        //     align-items: center;
-        //     width: 840px;
-        //     padding: 5px 0;
-        //     // overflow: auto;
-        //     // border: 1px solid orange;
+        .search {
+            display: flex;
+            justify-content: center;
+            // width: 800px;
+            width: 760px;
+            height: 50px;
+            padding: 0 25px;
+            background-color: #fff;
+            border-radius: 25px;
+            border: 2px solid rgba(0, 0, 0, .3);
             
-        //     .recipe-item {
-        //         margin-bottom: 20px;
-        //         // border: 1px dashed green;
-        //     }
-        // }
+            input {
+                flex: 1;
+                height: 46px;
+                font-size: 20px;
+                border: none;
+                &:focus {
+                    outline: none;
+                }
+            }
+
+            button {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 50px;
+                height: 46px;
+                font-size: 30px;
+                color: rgba(0, 0, 0, .7);
+                outline: none;
+                border: none;
+                background-color: #fff;
+                cursor: pointer;
+                &:hover {
+                    color: rgba(0, 0, 0, 1.0);
+                }
+            }
+        }
+
+        .contents {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            width: 760px;
+            margin-top: 30px;
+            // width: 800px;
+            border: 1px solid orange;
+
+            .recipe-list {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 760px;
+                height: 60vh;
+                padding-top: 10px;
+                margin-top: 10px;
+                overflow: auto;
+                background-color: #fff;
+                border: 1px solid orange;
+
+                .recipe-item {
+                    margin-bottom: 10px;
+                }
+                // Scroll bar
+                &::-webkit-scrollbar {
+                    width: 6px;
+                }
+                &::-webkit-scrollbar-track {
+                    background-color: transparent;
+                }
+                &::-webkit-scrollbar-thumb {
+                    border-radius: 3px;
+                    background-color: rgba(0, 0, 0, .2);
+                }
+                &::-webkit-scrollbar-button {
+                    width: 0;
+                    height: 0;
+                }
+            }
+
+            .filter {
+                order: -1;
+                width: 760px;
+                height: 24vh;
+                padding: 20px 20px 10px;
+                color: #42493A;
+                background-color: #fff;
+                h2 {
+                    font-size: 20px;
+                    font-weight: 700;
+                    margin-bottom: 25px;
+                }
+                .filter-list {
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: flex-start;
+                    flex-wrap: wrap;
+                    .filter-item {
+                        margin-right: 30px;
+                        margin-bottom: 20px;
+                        h3 {
+                            font-size: 18px;
+                            font-weight: 500;
+                            margin-bottom: 10px;
+                        }
+                        select {
+                            height: 24px;
+                            padding: 0 10px ;
+                            border-radius: 12px;
+                            border: 1px solid rgba(0, 0, 0, 0.2);
+                        }
+                        & > div {
+                            margin-bottom: 10px;
+                            label {
+                                font-weight: 500;
+                                margin: 0 10px;
+                            }
+                            input {
+                                height: 24px;
+                                padding: 0 10px;
+                                border-radius: 12px;
+                                border: 1px solid rgba(0, 0, 0, 0.2);
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 }
