--- a/src/scss/components/mobile/_Navigation.scss
+++ b/src/scss/components/mobile/_Navigation.scss
@@ -1,48 +1,53 @@
 @include mobile() {
     nav {
-        // position: fixed;
-        // width: 120px;
-        // height: 100vh;
-        // background: rgba(118, 172,	65, .9);
-        // border-radius: 0 30px 30px 0;
-        // box-shadow: 4px 4px 8px 8px rgba(0, 0, 0, 0.25);
-        // z-index: 1;
-        
-        // ul {
-        //     margin-top: 100px;
-            
-        //     li {
-                
-        //         .menu-btn {
-        //             display: flex;
-        //             justify-content: center;
-        //             align-items: center;
-        //             width: 120px;
-        //             height: 60px;
-        //             margin: 10px 0;
-        //             cursor: pointer;
-        //             // border: 1px solid red;
+        position: fixed;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        display: flex;
+        justify-content: center;
+        background: #fff;
+        box-shadow: 1px 2px 8px 1px rgba(0, 0, 0, 0.25);
+        z-index: 1;
+        // border: 1px solid red;
+        .nav-logo {
+            display: none;
+        }
+        ul {
+            display: flex;
+            width: 90vw;
+            justify-content: space-between;
+            // border: 1px solid orange;
+            li {
+                .menu-btn {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 50px;
+                    height: 50px;
+                    cursor: pointer;
+                    // border: 1px solid orange;
 
-        //             .menu-icon {
-        //                 width: 40px;
-        //                 height: 40px;
-        //                 border: 0;
-        //                 filter: invert(100%) sepia(78%) saturate(2%) hue-rotate(21deg) brightness(111%) contrast(100%);
-        //                 // -webkit-filter: invert(100%) sepia(78%) saturate(2%) hue-rotate(21deg) brightness(111%) contrast(100%);
-        //             }
-
-        //             .menu-icon.home,
-        //             .menu-icon.user {
-        //                 width: 40px;
-        //                 height: 40px;
-        //             }
-
-        //             &.active {
-        //                 border-radius: 25% 0 0 25%;
-        //                 background-color: rgba(255, 255, 255, 0.35);
-        //             }
-        //         }
-        //     }
-        // }
+                    .menu-icon {
+                        width: 30px;
+                        height: 30px;
+                        filter: invert(14%) sepia(12%) saturate(2158%) hue-rotate(71deg) brightness(99%) contrast(92%);
+                    }
+                    .menu-icon.home,
+                    .menu-icon.user {
+                        width: 25px;
+                        height: 25px;
+                    }
+                    
+                    &.active {
+                        background-color: #76AC41;
+                        .menu-icon{
+                            filter: invert(100%) sepia(78%) saturate(2%) hue-rotate(21deg) brightness(111%) contrast(100%);
+                            // -webkit-filter: invert(100%) sepia(78%) saturate(2%) hue-rotate(21deg) brightness(111%) contrast(100%);
+                        }
+                    }
+                }
+            }
+        }
     }
 }
