--- a/src/scss/pages/mobile/_App.scss
+++ b/src/scss/pages/mobile/_App.scss
@@ -1,7 +1,24 @@
 @include mobile() {
     .App {
+        // position: relative;
+        display: flex;
+        flex-direction: column;
+        font-family: 'Nanum Gothic Coding', monospace;
+        
         main {
-            background-color: aquamarine;
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            // bottom: 50px;
+            // bottom: 0;
+            // height: calc(100vh-50px);
+            order: -1;
+            background: #F6F0E4;
+        }
+        
+        section {
+            margin: 20px auto;
         }
     }
 }
