--- a/src/scss/pages/mobile/_Recipes.scss
+++ b/src/scss/pages/mobile/_Recipes.scss
@@ -1,4 +1,4 @@
-@include desktop() {
+@include mobile() {
 
     .page-recipes {
         display: flex;
@@ -8,20 +8,19 @@
         .search {
             display: flex;
             justify-content: center;
-            // align-items: center;
-            // width: 840px;
-            width: 800px;
-            height: 50px;
-            padding: 0 25px;
-            margin-bottom: 40px;
-            // border: 1px solid red;
-            border: 2px solid rgba(0, 0, 0, .3);
-            border-radius: 25px;
-
+            // width: 280px;
+            width: 300px;
+            height: 30px;
+            padding: 0 15px;
+            margin-bottom: 20px;
+            border-radius: 15px;
+            border: 1px solid rgba(0, 0, 0, .3);
+            background-color: #fff;
+            
             input {
                 flex: 1;
-                height: 46px;
-                font-size: 20px;
+                height: 28px;
+                font-size: 14px;
                 border: none;
                 &:focus {
                     outline: none;
@@ -32,9 +31,9 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                width: 50px;
-                height: 46px;
-                font-size: 30px;
+                width: 30px;
+                height: 28px;
+                font-size: 20px;
                 color: rgba(0, 0, 0, .7);
                 outline: none;
                 border: none;
@@ -50,13 +49,13 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: 840px;
-            padding: 5px 0;
+            width: 300px;
+            padding: 5px 0 0;
             // overflow: auto;
             // border: 1px solid orange;
             
             .recipe-item {
-                margin-bottom: 20px;
+                margin-bottom: 5px;
                 // border: 1px dashed green;
             }
         }
