--- a/src/scss/pages/tablet/_Recipes.scss
+++ b/src/scss/pages/tablet/_Recipes.scss
@@ -68,6 +68,12 @@
                 // background-color: #fff;
                 // border: 1px solid orange;
 
+                .empty-sign {
+                    margin-top: 240px;
+                    font-size: 36px;
+                    color: rgba(0, 0, 0, .5);
+                }
+
                 .recipe-item {
                     margin-bottom: 10px;
                 }
