--- a/src/scss/components/tablet/_RecipeCard.scss
+++ b/src/scss/components/tablet/_RecipeCard.scss
@@ -12,9 +12,13 @@
 
 
         .thumbnail {
-            width: 150px;
-            height: 150px;
-            background-color: rgba(0, 0, 0, .1);
+            // width: 150px;
+            // height: 150px;
+            // background-color: rgba(0, 0, 0, .1);
+            img {
+                width: 150px;
+                height: 150px;
+            }
         }
 
         .details {
