--- a/src/scss/pages/mobile/_Recipes.scss
+++ b/src/scss/pages/mobile/_Recipes.scss
@@ -53,6 +53,12 @@
             padding: 5px 0 0;
             // overflow: auto;
             // border: 1px solid orange;
+
+            .empty-sign {
+                margin-top: 50px;
+                font-size: 28px;
+                color: rgba(0, 0, 0, .5);
+            }
             
             .recipe-item {
                 margin-bottom: 5px;
