--- a/src/scss/pages/tablet/_App.scss
+++ b/src/scss/pages/tablet/_App.scss
@@ -9,7 +9,7 @@
             top: 0;
             right: 0;
             left: 120px;
-            height: 100vh;
+            // height: 100vh;
             background: #F6F0E4;
         }
         
