--- a/src/scss/components/mobile/_Navigation.scss
+++ b/src/scss/components/mobile/_Navigation.scss
@@ -15,7 +15,7 @@
         }
         ul {
             display: flex;
-            width: 90vw;
+            width: 320px;
             justify-content: space-between;
             // border: 1px solid orange;
             li {
