--- a/src/scss/pages/mobile/_Recipes.scss
+++ b/src/scss/pages/mobile/_Recipes.scss
@@ -45,24 +45,102 @@
             }
         }
         
-        .recipe-list {
+        .contents {
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: space-between;
             width: 300px;
-            padding: 5px 0 0;
-            // overflow: auto;
-            // border: 1px solid orange;
+            // border: 1px solid red;
 
-            .empty-sign {
-                margin-top: 50px;
-                font-size: 28px;
-                color: rgba(0, 0, 0, .5);
+            .recipe-list {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 300px;
+                padding: 5px 0 0;
+                // overflow: auto;
+                // border: 1px solid orange;
+
+                .empty-sign {
+                    margin-top: 50px;
+                    font-size: 28px;
+                    color: rgba(0, 0, 0, .5);
+                }
+
+                .recipe-item {
+                    margin-bottom: 5px;
+                    // border: 1px dashed green;
+                }
             }
-            
-            .recipe-item {
-                margin-bottom: 5px;
-                // border: 1px dashed green;
+
+            .filter {
+                order: -1;
+                width: 300px;
+                margin-bottom: 10px;
+                padding: 8px 10px;
+                color: #42493A;
+                background-color: rgba(255, 255, 255, 0.7);
+
+                h2 {
+                    font-size: 18px;
+                    font-weight: 700;
+                }
+                .filter-list {
+                    display: none;
+                }
+
+                &.active {
+                    .filter-list {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: flex-start;
+                        align-items: flex-start;
+                        margin-top: 14px;
+                        .filter-item {
+                            display: flex;
+                            flex-wrap: wrap;
+                            margin-bottom: 8px;
+                            h3 {
+                                font-size: 14px;
+                                font-weight: 500;
+                                margin-bottom: 4px;
+                                margin-right: 8px;
+                            }
+                            select {
+                                height: 20px;
+                                padding: 0 10px ;
+                                font-size: 12px;
+                                border-radius: 10px;
+                                border: 1px solid rgba(0, 0, 0, 0.2);
+                            }
+                            &:nth-child(4) {
+                                display: block;
+                                h3 {
+                                    margin-bottom: 10px;
+                                }
+                                div {
+                                    display: flex;
+                                    margin-bottom: 8px;
+                                    // border: 1px solid red;
+                                    label {
+                                        font-size: 14px;
+                                        font-weight: 500;
+                                        margin: 0 4px;
+                                    }
+                                    input {
+                                        font-size: 12px;
+                                        height: 20px;
+                                        padding: 0 10px;
+                                        border-radius: 10px;
+                                        border: 1px solid rgba(0, 0, 0, 0.2);
+                                    }
+                                }
+                            }
+                            
+                        }
+                    }
+                }
             }
         }
     }
