--- a/src/scss/pages/mobile/_App.scss
+++ b/src/scss/pages/mobile/_App.scss
@@ -10,7 +10,7 @@
             top: 0;
             right: 0;
             left: 0;
-            // bottom: 50px;
+            bottom: 50px;
             // bottom: 0;
             // height: calc(100vh-50px);
             order: -1;
