--- a/src/scss/pages/mobile/_Recipes.scss
+++ b/src/scss/pages/mobile/_Recipes.scss
@@ -38,6 +38,7 @@
                 outline: none;
                 border: none;
                 background-color: #fff;
+                z-index: 0;
                 cursor: pointer;
                 &:hover {
                     color: rgba(0, 0, 0, 1.0);
