--- a/src/scss/pages/desktop/_Recipes.scss
+++ b/src/scss/pages/desktop/_Recipes.scss
@@ -103,6 +103,9 @@
                     font-weight: 700;
                     margin-bottom: 40px;
                 }
+                .filter-toggle {
+                    display: none;
+                }
                 // Scroll bar
                 &::-webkit-scrollbar {
                     width: 6px;
