--- a/src/scss/pages/mobile/_Recipes.scss
+++ b/src/scss/pages/mobile/_Recipes.scss
@@ -59,8 +59,8 @@
                 flex-direction: column;
                 align-items: center;
                 width: 300px;
+                margin-bottom: 60px;
                 padding: 5px 0 0;
-                // overflow: auto;
                 // border: 1px solid orange;
 
                 .empty-sign {
@@ -76,6 +76,7 @@
             }
 
             .filter {
+                position: relative;
                 order: -1;
                 width: 300px;
                 margin-bottom: 10px;
@@ -86,6 +87,22 @@
                 h2 {
                     font-size: 18px;
                     font-weight: 700;
+                }
+                .filter-toggle {
+                    position: absolute;
+                    top: 8px;
+                    right: 16px;
+                    width: 12px;
+                    height: 12px;
+                    // background-color: aquamarine;
+                    border: 2px solid #42493A;
+                    border-top: 0;
+                    border-right: 0;
+                    transform: rotate(-45deg);
+                    &.active {
+                        top: 12px;
+                        transform: rotate(135deg);
+                    }
                 }
                 .filter-list {
                     display: none;
