--- a/src/scss/pages/tablet/_Recipes.scss
+++ b/src/scss/pages/tablet/_Recipes.scss
@@ -60,7 +60,8 @@
                 flex-direction: column;
                 align-items: center;
                 width: 760px;
-                height: 60vh;
+                height: 640px;
+                // height: 60vh;
                 padding-top: 10px;
                 margin-top: 10px;
                 overflow: auto;
@@ -105,6 +106,9 @@
                 h2 {
                     font-size: 20px;
                     font-weight: 700;
+                }
+                .filter-toggle {
+                    display: none;
                 }
                 .filter-list {
                     display: flex;
