--- a/src/scss/components/desktop/_RecipeCard.scss
+++ b/src/scss/components/desktop/_RecipeCard.scss
@@ -9,7 +9,12 @@
         background: #fff;
         border-radius: 10px;
         box-shadow: 1px 1px 8px 1px rgba(0, 0, 0, .25);
-
+        cursor: pointer;
+        transition: width 0.3s, height 0.3s;
+        &:hover {
+            width: 820px;
+            height: 260px;
+        }
 
         .thumbnail {
             img {
