--- a/src/scss/components/desktop/_RecipePopup.scss
+++ b/src/scss/components/desktop/_RecipePopup.scss
@@ -1,2 +1,47 @@
 @include desktop() {
+    .recipe-popup {
+        position: relative;
+        display: flex;
+        width: 1160px;
+        // height: 500px;
+        padding: 20px;
+        margin: 50px auto;
+        background-color: #fff;
+        border-radius: 12px;
+        // border: 1px solid red;
+        
+        .btn-close {
+            position: absolute;
+            top: 0;
+            right: 0;
+            font-size: 50px;
+            // border: 1px solid red;
+            cursor: pointer;
+        }
+
+        .popup-inner {
+            // display: flex;
+            // flex-direction: column;
+            // align-items: center;
+            // justify-content: center;
+            &.popup-left {
+                width: 420px;
+                padding-right: 20px;
+                border-right: 1px dashed #9999CC;
+    
+                .popup-img {
+                    width: 400px;
+                    height: 400px;
+                    background-color: rgba(0, 0, 0, .2);
+                }
+            }
+            &.popup-right {
+                width: 700px;
+                padding-left: 20px;
+                // border: 2px dashed purple;
+            }
+        }
+
+
+    }
 }
