--- a/src/scss/components/mobile/_RecipeCard.scss
+++ b/src/scss/components/mobile/_RecipeCard.scss
@@ -9,8 +9,8 @@
         background: #fff;
         border-radius: 5px;
         box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, .25);
-
-
+        cursor: pointer;
+        
         .thumbnail {
             img {
                 width: 100px;
