Nutrition styling (desktop)

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,7 @@
 // --- pages --- //
 @import './pages/desktop/App';
 @import './pages/desktop/Home';
+@import './pages/desktop/Nutrition';
 @import './pages/desktop/Recipes';
 // @import './pages/Login.scss';
 
