--- a/src/scss/pages/desktop/_Nutrition.scss
+++ b/src/scss/pages/desktop/_Nutrition.scss
@@ -151,7 +151,7 @@
         
         .nutrition-result {
             width: 900px;
-            padding: 54px 24px;
+            padding: 60px 0px 40px;
             margin: 30px 0;
             background-color: #fff;
             clip-path: polygon(0 0, 6% 2%, 14% 0, 21% 4%, 29% 3%, 34% 0, 42% 0, 47% 4%, 54% 4%, 57% 0, 64% 2%, 70% 1%, 78% 0, 84% 3%, 95% 0, 100% 5%, 100% 98%, 94% 100%, 86% 96%, 80% 100%, 75% 96%, 68% 96%, 62% 99%, 55% 100%, 48% 96%, 40% 97%, 35% 100%, 30% 96%, 23% 99%, 16% 96%, 10% 97%, 4% 100%, 0 96%);            
@@ -168,16 +168,58 @@
                 font-size: 40px;
                 font-weight: 700;
                 text-align: center;
-                margin-bottom: 20px;
+                margin: 40px 0 20px;
                 padding-bottom: 20px;
                 color: rgba(0, 0, 0, .7);
                 // border-bottom: 1.5px solid rgba(0, 0, 0, .35);
                 border-bottom: 2px dashed rgba(#5A5333, .5);
             }
-            h3 {
-                font-size: 28px;
-                font-weight: 600;
-                color: rgba(0, 0, 0, .7);
+            
+            .result {
+                // border: 1px solid red;
+                padding: 20px 100px 80px;
+                line-height: 1.2;
+                font-family: 'Didact Gothic', sans-serif;
+                
+                dl {
+                    // border: 1px dashed orange;
+                    padding: 10px 40px;
+                    border-top: 1px solid rgba(#282517, .2);
+                    dt {
+                        font-size: 24px;
+                        font-weight: 500;
+                        padding-top: 10px;
+                        &:first-child {
+                            font-weight: 700;
+                        }
+                    }
+                    dd {
+                        text-align: right;
+                        font-size: 20px;
+                        line-height: 1.5;
+                    }
+                    
+                    &.calories {
+                        display: flex;
+                        justify-content: space-between;
+                        border: none;
+                        dt {
+                            p:last-child {
+                                font-size: 48px;
+                            }
+                        }
+                        dd {
+                            font-size: 72px;
+                            font-weight: 500;
+                        }
+                    }
+                    &.daily-value {
+                        text-align: right;
+                    }
+                    &:last-child {
+                        border-bottom: 1px solid rgba(#282517, .2);
+                    }
+                }
             }
         }
     }
