Nutrition styling ( tablet & mobile )

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,8 +28,10 @@
 
 @import './pages/tablet/App';
 @import './pages/tablet/Recipes';
+@import './pages/tablet/Nutrition';
 // @import './pages/tablet/Home';
 
 @import './pages/mobile/App';
 @import './pages/mobile/Recipes';
+@import './pages/mobile/Nutrition';
 // @import './pages/mobile/Home';
