--- a/src/scss/pages/mobile/_Nutrition.scss
+++ b/src/scss/pages/mobile/_Nutrition.scss
@@ -78,13 +78,14 @@
                         .input-container {
                             margin-bottom: 8px;
                             label {
+                                display: block;
                                 font-size: 16px;
                                 font-weight: 500;
                                 color: #5A5221;
                             }
                             input {
                                 height: 30px;
-                                width: 160px;
+                                width: 50px;
                                 padding: 5px 10px;
                                 margin-top: 4px;
                                 border-radius: 6px;
