--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,8 @@
 // --- pages --- //
 @import './pages/desktop/App';
 @import './pages/desktop/Home';
+@import './pages/desktop/User';
+@import './pages/desktop/MyRecipes';
 @import './pages/desktop/Nutrition';
 @import './pages/desktop/Recipes';
 // @import './pages/Login.scss';
