--- a/src/scss/pages/desktop/_App.scss
+++ b/src/scss/pages/desktop/_App.scss
@@ -15,7 +15,8 @@
         }
         
         section {
-            margin: 40px auto 30px;
+            min-height: 90vh;
+            margin: 40px auto;
         }
     }
 
