--- a/src/scss/pages/desktop/_MyRecipes.scss
+++ b/src/scss/pages/desktop/_MyRecipes.scss
@@ -1,5 +1,26 @@
+@include desktop() {
 .page-myrecipes {
-    div {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+
+    .login-first {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        p {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 700px;
+            height: 300px;
+            font-size: 36px;
+            color: #477F8F;
+            background-color: #fff;
+        }
+    }
+    .myrecipes-container {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -9,15 +30,24 @@
         margin: 0 auto;
         background-color: #fff;
         
-        p {
-            font-size: 28px;
-            margin: 40px;
-            // text-align: center;
-            &:first-child{
-                font-size: 40px;
-                font-weight: 600;
-                color: rgba(0, 0, 0, .35);
+        // p {
+        //     font-size: 28px;
+        //     margin: 40px;
+        //     // text-align: center;
+        //     &:first-child{
+        //         font-size: 40px;
+        //         font-weight: 600;
+        //         color: rgba(0, 0, 0, .35);
+        //     }
+        // }
+        ul {
+            width: 300px;
+            height: 300px;
+            border: 1px solid red;
+            li {
+                background-color: aliceblue;
             }
         }
     }
+}
 }
