--- a/src/scss/pages/desktop/_Nutrition.scss
+++ b/src/scss/pages/desktop/_Nutrition.scss
@@ -3,7 +3,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        // border: 1px solid red;
 
         button {
             cursor: pointer;
@@ -23,7 +22,6 @@
                 text-align: center;
                 padding: 10px 0 0;
                 color: #5A5221;
-                // border-bottom: 1px dashed rgba(0, 0, 0, .35);
             }
 
             .ingredient-btn {
@@ -48,7 +46,6 @@
                         align-items: center;
                         height: 36px;
                         width: 60px;
-                        // border-radius: 15px;
                         border: none;
                         background: rgba(255, 255, 255, 0.7);
                     }
@@ -59,7 +56,6 @@
                         &:hover {
                             color: #fff;
                             background: #008A72;
-                            // background: #0074B1;
                         }
                     }
                     .btn-reset {
@@ -69,7 +65,6 @@
                         &:hover {
                             color: #fff;
                             background: #FF6E49;
-                            // background: #0074B1;
                         }
                     }
                     .btn-analyze {
@@ -78,7 +73,6 @@
                         &:hover {
                             color: #fff;
                             background: #4b4ba8;
-                            // background: #0074B1;
                         }
                     }
                 }
@@ -91,7 +85,6 @@
                     justify-content: space-around;
                     align-items: center;
                     margin-bottom: 10px;
-                    // border: 1px dashed palevioletred;
 
                     .input-group {
                         display: flex;
@@ -130,7 +123,6 @@
                     }
                     .btn-clear {
                         color: #007FA4;
-                        // background-color: #ffedff;
                         &:hover {
                             color: #fff;
                             background-color: #007FA4;
@@ -138,7 +130,6 @@
                     }
                     .btn-delete {
                         color: #D87093;
-                        // background-color: #ffeff6;
                         &:hover {
                             color: #fff;
                             background-color: #D87093;
@@ -151,6 +142,7 @@
         
         .nutrition-result {
             width: 900px;
+            min-height: 60vh;
             padding: 60px 0px 40px;
             margin: 30px 0;
             background-color: #fff;
@@ -160,7 +152,7 @@
                 font-size: 36px;
                 font-weight: 600;
                 text-align: center;
-                padding: 50px 0;
+                margin-top: 16vh;
                 color: rgba(0, 0, 0, .2);
             }
 
@@ -171,18 +163,15 @@
                 margin: 40px 0 20px;
                 padding-bottom: 20px;
                 color: rgba(0, 0, 0, .7);
-                // border-bottom: 1.5px solid rgba(0, 0, 0, .35);
                 border-bottom: 2px dashed rgba(#5A5333, .5);
             }
             
             .result {
-                // border: 1px solid red;
                 padding: 20px 100px 80px;
                 line-height: 1.2;
                 font-family: 'Didact Gothic', sans-serif;
                 
                 dl {
-                    // border: 1px dashed orange;
                     padding: 10px 40px;
                     border-top: 1px solid rgba(#282517, .2);
                     dt {
