--- a/src/scss/pages/mobile/_User.scss
+++ b/src/scss/pages/mobile/_User.scss
@@ -1,4 +1,4 @@
-@include desktop() {
+@include mobile() {
     .page-user {
 
         display: flex;
@@ -13,33 +13,35 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                width: 700px;
+                width: 300px;
                 height: 300px;
-                font-size: 36px;
+                font-size: 24px;
                 color: #477F8F;
                 background-color: #fff;
             }
         }
-
+        
         .user-container {
-            width: 1160px;
-            min-height: 90vh;
-            margin: 0 auto;
-            display: grid;
-            grid-template-columns: 1fr 2fr;
-            grid-template-rows: 2fr 3fr;
-            gap: 20px;
-
+            width: 320px;
+            margin-bottom: 50px;
+            
             .user-inner {
-                padding: 20px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 10px;
+                margin-top: 16px;
                 background-color: #fff;
+                &:first-child {
+                    margin-top: 0px;
+                }
                 table {
                     width: 100%;
                     thead {
                         border-bottom: 1px solid #c59874;
                         th {
-                            padding: 20px 0;
-                            font-size: 22px;
+                            padding: 10px 0;
+                            font-size: 14px;
                             font-weight: 600;
                             color: rgba(#42493A, .7);
                             td {
@@ -51,10 +53,9 @@
                         tr {
                             border-bottom: 1px dashed #F2C466;
                             td {
-                                padding: 10px 20px;
-                                font-size: 18px;
+                                padding: 10px;
+                                font-size: 12px;
                                 text-align: center;
-                                // border-right: 1px solid rgba(0, 0, 0, .15);
                                 &:first-child{
                                     width: 70%;
                                 }
@@ -63,38 +64,52 @@
                                     color: rgba(0, 0, 0, .6);
                                 }
                             }
+                            &:last-child {
+                                border: none;
+                            }
                         }
                     }
                 }
             }
 
             .user-info {
-                grid-row: 1/ 3;
-                grid-column: 1/ 2;
-
+                height: 150px;
                 .profile-img {
-                    width: 240px;
-                    height: 240px;
-                    margin: 50px auto 100px;
-                    border-radius: 120px;
-                    background-color: rgba(0, 0, 0, .15);
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 50px;
+                    background-color: rgba(0, 0, 0, .18);
                 }
                 table {
-                    // border: 1px solid orange;
+                    width: 180px;
+                    tbody{
+                        tr {
+                            font-size: 12px;
+                            border-bottom: 1px dashed #F2C466;
+                            &:last-child {
+                                border: none;
+                            }
+                            th {
+                                padding: 5px;
+                            }
+                            td {
+                                padding: 5px;
+                                text-align: center;
+                            }
+                        }
+                    }
                 }
             }
 
             .user-saveRecipe {
-                grid-row: 1/ 2;
-                grid-column: 2/ 3;
+                min-height: 200px;
             }
-
+            
             .user-myRecipe {
-                grid-row: 2/ 3;
-                grid-column: 2/ 3;
+                min-height: 300px;
             }
 
         }
-    }
 
+    }
 }
