--- a/src/scss/pages/tablet/_App.scss
+++ b/src/scss/pages/tablet/_App.scss
@@ -13,7 +13,8 @@
         }
         
         section {
-            margin: 40px auto 30px;
+            min-height: 90vh;
+            margin: 40px auto;
         }
     }
 
