--- a/src/scss/pages/tablet/_User.scss
+++ b/src/scss/pages/tablet/_User.scss
@@ -1,4 +1,4 @@
-@include desktop() {
+@include tablet() {
     .page-user {
 
         display: flex;
@@ -13,7 +13,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                width: 700px;
+                width: 600px;
                 height: 300px;
                 font-size: 36px;
                 color: #477F8F;
@@ -22,24 +22,25 @@
         }
 
         .user-container {
-            width: 1160px;
-            min-height: 90vh;
-            margin: 0 auto;
-            display: grid;
-            grid-template-columns: 1fr 2fr;
-            grid-template-rows: 2fr 3fr;
-            gap: 20px;
-
+            width: 720px;
+            
             .user-inner {
-                padding: 20px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 20px 40px;
+                margin-top: 16px;
                 background-color: #fff;
+                &:first-child {
+                    margin-top: 0px;
+                }
                 table {
                     width: 100%;
                     thead {
                         border-bottom: 1px solid #c59874;
                         th {
-                            padding: 20px 0;
-                            font-size: 22px;
+                            padding: 16px 0;
+                            font-size: 18px;
                             font-weight: 600;
                             color: rgba(#42493A, .7);
                             td {
@@ -51,10 +52,9 @@
                         tr {
                             border-bottom: 1px dashed #F2C466;
                             td {
-                                padding: 10px 20px;
-                                font-size: 18px;
+                                padding: 10px;
+                                font-size: 16px;
                                 text-align: center;
-                                // border-right: 1px solid rgba(0, 0, 0, .15);
                                 &:first-child{
                                     width: 70%;
                                 }
@@ -63,38 +63,48 @@
                                     color: rgba(0, 0, 0, .6);
                                 }
                             }
+                            &:last-child {
+                                border: none;
+                            }
                         }
                     }
                 }
             }
 
             .user-info {
-                grid-row: 1/ 3;
-                grid-column: 1/ 2;
-
+                height: 240px;
                 .profile-img {
-                    width: 240px;
-                    height: 240px;
-                    margin: 50px auto 100px;
-                    border-radius: 120px;
-                    background-color: rgba(0, 0, 0, .15);
+                    width: 180px;
+                    height: 180px;
+                    border-radius: 90px;
+                    background-color: rgba(0, 0, 0, .18);
                 }
                 table {
-                    // border: 1px solid orange;
+                    width: 400px;
+                    tr {
+                        border-bottom: 1px dashed #F2C466;
+                        &:last-child {
+                            border: none;
+                        }
+                        td {
+                            padding: 10px 20px;
+                            font-size: 16px;
+                            text-align: center;
+                        }
+                    }
                 }
             }
 
             .user-saveRecipe {
-                grid-row: 1/ 2;
-                grid-column: 2/ 3;
+                min-height: 240px;
             }
-
+            
             .user-myRecipe {
-                grid-row: 2/ 3;
-                grid-column: 2/ 3;
+                min-height: 360px;
+                
             }
 
         }
-    }
 
+    }
 }
