--- a/src/scss/pages/mobile/_Home.scss
+++ b/src/scss/pages/mobile/_Home.scss
@@ -28,6 +28,10 @@
             .logout {
                 margin-top: 40px;
             }
+            .kakao_btn,
+            .logout_btn {
+                cursor: pointer;
+            }
             .logout_btn {
                 display: flex;
                 justify-content: center;
